--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "BuJo Bullets",
 	"version": "1.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "Alternate checkbox types for Obsidian to support Bullet Journal bullets",
+	"description": "Alternate checkbox types to support Bullet Journal bulletss",
 	"author": "Will Olson",
 	"authorUrl": "https://willolson.io",
 	"fundingUrl": "https://github.com/sponsors/frankolson",
